--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -82,15 +82,73 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform">Reserve Table
-                    </a>
+                    <a role="button" class="btn btn-block nav-link btn-warning" href="#reserveform"
+                    data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
-
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group row">
+                        <div class="col-md-6">
+                            <div class="form-radio">
+                                <label class="form-radio-label mr-3" for="approve">
+                                    <strong>Number of Guest?</strong>
+                                </label>
+                                <input type="radio" class="form-radio-button" name="approve" id="approve" value="1">
+                                <label for="1">1</label>
+                                <input type="radio" class="form-radio-button" name="approve" id="approve" value="2">
+                                <label for="2">2</label>
+                                <input type="radio" class="form-radio-button" name="approve" id="approve" value="3">
+                                <label for="3">3</label>
+                                <input type="radio" class="form-radio-button" name="approve" id="approve" value="4">
+                                <label for="4">4</label>
+                                <input type="radio" class="form-radio-button" name="approve" id="approve" value="5">
+                                <label for="5">5</label>
+                                <input type="radio" class="form-radio-button" name="approve" id="approve" value="6">
+                                <label for="6">6</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex mb-3" >
+                        <label class="mr-3">Section</label>
+                        <div class="btn-group-toggle" data-toggle="buttons">
+                            <label class="btn btn-primary active">
+                            <input type="checkbox" checked autocomplete="on"> No Smoking
+                            </label>
+                        </div>
+                        <div class="btn-group-toggle" data-toggle="buttons">
+                            <label class="btn btn-danger">
+                            <input type="checkbox" checked autocomplete="off"> No Smoking
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="telnum" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                        <div class="col-5 col-md-4 col-sm-12 col-sm">
+                            <input type="date" class="form-control" id="date" name="areacode" placeholder="Date">
+                        </div>
+                        <div class="col-5 col-md-4 col-sm-12 col-sm">
+                            <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                        </div>
+                    </div>
+                    <div class="form-row row offset-md-2 col-md-10">
+                        <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                    </div>
+                </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row row-content">
             <div class="col">
@@ -290,11 +348,6 @@
  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
- <script>
-    $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
-    });
-</script>
 </body>
 
 </html>
